--- a/songbird/src/index.css
+++ b/songbird/src/index.css
@@ -7,4 +7,5 @@ body {
   background-color: rgb(216, 213, 223);
   font-family: Arial, Helvetica, sans-serif;
   color: rgb(8, 8, 65);
+  user-select: none;
 }
