--- a/songbird/src/components/StartButton/StartButton.css
+++ b/songbird/src/components/StartButton/StartButton.css
@@ -11,7 +11,8 @@
   background-color: rgb(35, 13, 116);
   box-shadow: 0px 4px 4px rgb(35, 13, 116, 0.4), 0px 0px 4px rgb(35, 13, 116, 0.4);
   outline: none;
-  border: none; 
+  border: none;
+  cursor: pointer; 
 }
 
 @media (max-width: 530px) {
