--- a/songbird/src/components/ResultCard/ResultCard.css
+++ b/songbird/src/components/ResultCard/ResultCard.css
@@ -5,7 +5,6 @@
   align-items: center;
   align-self: center;
   width: 90%;
-  height: 300px;
   padding: 10px;
   margin-top: 20px;
   border-radius: 10px;
@@ -15,10 +14,17 @@
 .result-card-congratulation {
   font-size: 36px;
   font-weight: 700;
+  text-align: center;
 }
 
 .result-card-text {
   padding: 30px 0;
   font-size: 22px;
   text-align: center;
+}
+
+@media (max-width: 400px) {
+  .winner-image {
+    width: 270px;
+  }
 }
